What's New
==========

0.97.009
--------

allow tzinfo addition/change in DateTime.combine()


0.97.008
--------

Marshalling a DateTime now works


0.97.007
--------

add pytz support to Time and DateTime
Marshalling a DateTime sends as UTC if possible


0.97.004
--------

Fix bug in VFP doubles


0.97.003
--------

Fix field creation flag handling
Allow (redundant) "binary" flag on binary type fields


0.97.002
--------

Fix fp/FoxBase table header creation


0.97.001
--------

Can now open dbf files as read-only when lacking write permissions.


0.97.000
--------

Moved to a single 2/3 code base.
Opening a database now defaults to dbf.READ_ONLY; can also use dbf.READ_WRITE;
the corresponding strings are no longer supported.


0.96.008
--------

Handle vfp_double with decimal (Foxpro uses it for display purposes)
    (thanks, Joshua Adelman!)


0.96.007
--------

rev: 168   rename tests to test


0.96.006
--------

restore pql


0.96.005
--------

fix create_backup to use the active codepage, which may be different from
the table's codepage


0.96.004
--------

change duplicate NUMERIC to FLOAT
add Float fields to tests
change from_csv to write directly to disk if to_disk requested
fix erronious access to _dirty in RecordTemplate


0.96.003
--------

add 'basestring' to ver_2.py
add 'basestring' to ver_2.py


0.96.000
--------

add support for Python 3
convert from module to package layout
remove pql
fix Time and DateTime signatures: microsec --> microseconds
fix Time and DateTime .now() to truncate microseconds past thousands


0.95.014
--------

use a sparse container for the table -- should make very large dbf files usable


0.95.013
--------

Null fields properly ignored if table doesn't support it


0.95.012
--------

adjust setup.py to require enum34

add custom data types to xmlrpclib.Marshaller (marshalled as the underlying
type)

add support for storing numbers as scientific notation

fixed DateTime.now() and Time.now() to only return milliseconds

